Fix input groups vertical align in panel cell

--- a/less/bootstrap-theme/input-groups.less
+++ b/less/bootstrap-theme/input-groups.less
@@ -24,25 +24,61 @@
 // -------------------------
 
 .input-group {
+    .input-group-addon,
+    .input-group-btn {
+        vertical-align: top;
+    }
+
     .input-group-addon {
         border: none;
         border-bottom: 1px solid transparent;
         background-color: transparent;
-        vertical-align: top;
         line-height: @line-height-base;
 
         &:first-child {
              min-width: 70px;
          }
     }
+
+    .floating-group {
+        .floating-bar,
+        .help-block {
+            float: left;
+        }
+    }
 }
 
-div[class*="col-"] {
+div[class*="col-"],
+.control-label + .block-control,
+.control-label + .panel-block-help + .block-control {
     > .input-group {
         .input-group-addon,
         .input-group-btn {
             &:first-child {
                 min-width: inherit;
+            }
+        }
+    }
+}
+
+.block-control {
+    > .input-group,
+    .floating-group {
+        margin-top: -10px;
+    }
+
+    > .input-group {
+        .floating-group {
+            display: table-cell;
+
+            .form-control {
+                display: block;
+            }
+        }
+
+        .input-group-addon {
+            .material-icons {
+                margin-top: -3px;
             }
         }
     }
