--- a/less/bootstrap-theme/panels.less
+++ b/less/bootstrap-theme/panels.less
@@ -236,7 +236,7 @@
                 padding-top: 10px;
                 padding-bottom: 10px;
 
-                .form-control {
+                > .form-control {
                     margin-top: -10px;
                 }
             }
